--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body onload="fetchIssues()">
     <div class="container">
-      <h1>Issue Tracker: </h1>
+     <div class="row">
+      <h1 class="col-md-10">Issue Tracker: </h1>
+      <p style="margin-top: 35px;" class="col-md-2" id="issue-count">Open Issue: <span id="open-issue">0</span>(<span id="total-issue">0</span> )</p>
+     </div>
       <div class="jumbotron">
         <h3>Add New Issue:</h3>
         <form id="issueInputForm">
